ảnh icon đăng nhập đã giống với ảnh chìm của hóa đơn thanh toán

--- a/namm/namm.csproj
+++ b/namm/namm.csproj
@@ -308,5 +308,8 @@
   <ItemGroup>
     <Resource Include="Resources\login_icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\background_invoice.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
